[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://game/open_world.gd" id="1"]
[ext_resource type="Script" path="res://game/grid_renderer.gd" id="2"]

[node name="OpenWorld" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.05, 0.08, 1)

[node name="GridRenderer" type="Node2D" parent="."]
position = Vector2(0, 0)
script = ExtResource("2")
cell_size = Vector2(48, 48)
origin = Vector2(340, 100)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/HUD"]
offset_left = 16.0
offset_top = 8.0
offset_right = 300.0
offset_bottom = 40.0
theme_override_constants/separation = 24

[node name="HPLabel" type="Label" parent="CanvasLayer/HUD/TopBar"]
custom_minimum_size = Vector2(90, 0)
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.4, 0.4, 1)
text = "HP: 10/10"

[node name="GoldLabel" type="Label" parent="CanvasLayer/HUD/TopBar"]
custom_minimum_size = Vector2(90, 0)
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Gold: 0"

[node name="DayLabel" type="Label" parent="CanvasLayer/HUD/TopBar"]
custom_minimum_size = Vector2(80, 0)
theme_override_font_sizes/font_size = 18
text = "Day 1"

[node name="ResourcesLabel" type="Label" parent="CanvasLayer/HUD/TopBar"]
custom_minimum_size = Vector2(200, 0)
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.8, 0.7, 1)
text = "Wood: 0 | Stone: 0 | Food: 0"

[node name="ModeLabel" type="Label" parent="CanvasLayer/HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
text = "EXPLORE"

[node name="ObjectivePanel" type="Panel" parent="CanvasLayer/HUD"]
offset_left = 16.0
offset_top = 50.0
offset_right = 320.0
offset_bottom = 140.0

[node name="ObjectiveLabel" type="RichTextLabel" parent="CanvasLayer/HUD/ObjectivePanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
bbcode_enabled = true
text = "[b]OBJECTIVE[/b]
Explore the land and defend your castle!"

[node name="EnemyPanel" type="Panel" parent="CanvasLayer/HUD"]
visible = false
offset_left = 16.0
offset_top = 150.0
offset_right = 320.0
offset_bottom = 350.0

[node name="EnemyTitle" type="Label" parent="CanvasLayer/HUD/EnemyPanel"]
offset_left = 12.0
offset_top = 8.0
offset_right = 300.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "ENEMIES ATTACKING!"

[node name="EnemyList" type="RichTextLabel" parent="CanvasLayer/HUD/EnemyPanel"]
offset_left = 12.0
offset_top = 36.0
offset_right = 296.0
offset_bottom = 190.0
bbcode_enabled = true
text = "Type the word to attack:
[color=yellow]raider[/color] - HP: 3"

[node name="TileInfoLabel" type="Label" parent="CanvasLayer/HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -80.0
offset_right = 400.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 16
text = "Cursor: (8, 5) - Plains"

[node name="ActionsLabel" type="Label" parent="CanvasLayer/HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -46.0
offset_right = 700.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
text = "Arrow keys: move | explore: discover tiles | build wall/tower/farm | end: advance day"

[node name="CommandBar" type="LineEdit" parent="CanvasLayer/HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -24.0
offset_right = 250.0
offset_bottom = -4.0
theme_override_font_sizes/font_size = 18
placeholder_text = "Type command or enemy word..."
alignment = 1

[node name="LogPanel" type="Panel" parent="CanvasLayer/HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 50.0
offset_right = -16.0
offset_bottom = 220.0
modulate = Color(1, 1, 1, 0.9)

[node name="LogTitle" type="Label" parent="CanvasLayer/HUD/LogPanel"]
offset_left = 8.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
text = "EVENT LOG"

[node name="LogLabel" type="RichTextLabel" parent="CanvasLayer/HUD/LogPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 24.0
offset_right = -8.0
offset_bottom = -8.0
bbcode_enabled = true
scroll_active = true
scroll_following = true

[node name="MenuButton" type="Button" parent="CanvasLayer/HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = 40.0
text = "Menu"
